--- a/WEB_DIR/Pages/Shared/_Layout.cshtml
+++ b/WEB_DIR/Pages/Shared/_Layout.cshtml
@@ -64,6 +64,10 @@
                                    asp-area="" asp-page="/Viewss/Models/ModelsIndex">Models</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-white"
+                                   asp-area="" asp-page="/Viewss/Location/LocationIndex">Locations</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-muted"> | </a>
                             </li>
                             <li class="nav-item">
