--- a/WEB_DIR/Pages/Viewss/Location/LocationIndex.cshtml
+++ b/WEB_DIR/Pages/Viewss/Location/LocationIndex.cshtml
@@ -1,23 +1,23 @@
 ﻿@page
-@model WEB_DIR.Pages.Viewss.Bookings.BookingsIndexModel
+@model WEB_DIR.Pages.Viewss.Location.LocationIndexModel
 @{
 }
 
 <div>
     <h4 class="mt-4"> Management Portal</h4>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active"><a href='@Url.Action("Index","Home")' class="ml-1 mr-1">Dashboard</a> / Bookings</li>
+        <li class="breadcrumb-item active"><a href='@Url.Action("Index","Home")' class="ml-1 mr-1">Dashboard</a> / Location</li>
     </ol>
 
     <div>
-        <button onclick="resetButtons()" data-toggle="modal" data-target="#modal" class="btn btn-primary w-100">Add Booking</button>
+        <button onclick="resetButtons('User')" data-toggle="modal" data-target="#modal" class="btn btn-primary w-100">Add Location</button>
     </div>
 
     <!-- database table -->
     <div class="card mt-4">
         <div class="card-header">
             <i class="fas fa-table mr-1"></i>
-            Current Bookings
+            Current Users
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -25,10 +25,10 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>User</th>
-                            <th>Service</th> 
-                            <th>Date Booked</th>
-
+                            <th>Title</th>
+                            <th>Latitude</th>
+                            <th>Longitude</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody id="tableData"></tbody>
@@ -53,32 +53,28 @@
                 <div class="modal-body">
                     <div class="form-group" contenteditable="true">
                         <div class="row">
-                            <div class="col-md-4">
-                                <label class="font-weight-bold">Services <i class="icofont-rounded-down"></i></label>
-                                <select class="form-control" name="serviceId" id="serviceId" required>  </select>
+                            <div class="col-md-6">
+                                <label class="font-weight-bold">Latitude</label>
+                                <input type="text" class="form-control" name="latitude" required autocomplete="off">
                             </div>
-                            <div class="col-md-4">
-                                <label class="font-weight-bold">Car Model <i class="icofont-rounded-down"></i></label>
-                                <select class="form-control" name="ModelId" id="ModelId" required>  </select>
+                            <div class="col-md-6">
+                                <label class="font-weight-bold">Longitude</label>
+                                <input type="text" class="form-control" name="longitude" required autocomplete="off">
                             </div>
-                            <div class="col-md-4">
-                                <label class="font-weight-bold">Users <i class="icofont-rounded-down"></i></label>
-                                <select class="form-control" name="userId" id="userId" required>  </select>
-                            </div> 
-                            <div class="col-md-12 mt-4">
-                                <label class="font-weight-bold">Booking Date</label>
-                                <input type="date" class="form-control" name="bookingDate" required>
+                            <div class="col-md-12">
+                                <label class="font-weight-bold">Title</label>
+                                <input type="text" class="form-control" name="title" required autocomplete="off">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button id="btnCreate" type="button" class="btn btn-primary" onclick="dbHandler(false)">
+                    <button id="btnCreateUser" type="button" class="btn btn-primary" onclick="dbHandler(false)">
                         <span id="btnSpinner" class="d-none spinner-border  spinner-grow-sm" role="status" aria-hidden="true"></span>
                         Save changes
                     </button>
-                    <button id="btnUpdate" type="button" class="btn btn-warning d-none" onclick="dbHandler(true)">
+                    <button id="btnUpdateUser" type="button" class="btn btn-warning d-none" onclick="dbHandler(true)">
                         <span id="btnSpinnerUpdate" class="d-none spinner-border  spinner-grow-sm" role="status" aria-hidden="true"></span>
                         Update
                     </button>
@@ -90,54 +86,15 @@
 
 <script>
     $(document).ready(async function () {
-        await getData();
+        await getUserData();
         displayMainBody();
     });
 
-    async function getData() {
+    async function getUserData() {
         $('#dataTable').DataTable({ "bDestroy": true }).clear();
 
-        //get services
-        await makeGetRequest(baseUrl + `getAllServices`).then(async response => {
-        if (response != null) {
-            for (i in response.results) {
-                var dataList = response.results[i];
-                $('#serviceId').append($('<option>', {
-                    value: dataList.id,
-                    text: dataList.title,
-                }));
-            }
-        }
-        });
-
-        //get model
-        await makeGetRequest(baseUrl + `getAllModels`).then(async response => {
-            if (response != null) {
-                for (i in response.results) {
-                    var dataList = response.results[i];
-                    $('#ModelId').append($('<option>', {
-                        value: dataList.id,
-                        text: dataList.title,
-                    }));
-                }
-            }
-        });
-
-        //get getAllUsers
-        await makeGetRequest(baseUrl + `getAllUsers`).then(async response => {
-        if (response != null) {
-            for (i in response.results) {
-                var dataList = response.results[i];
-                $('#userId').append($('<option>', {
-                    value: dataList.id,
-                    text: dataList.names,
-                }));
-            }
-        }
-        });
-
         //get account types
-        await makeGetRequest(baseUrl + `getAllBookings`).then(async response => {
+        await makeGetRequest(baseUrl + `getAllLocation`).then(async response => {
             if (response != null) {
                 for (i in response.results) {
                     var dataList = response.results[i];
@@ -146,12 +103,13 @@
                         "bDestroy": true
                     }).row.add([
                         dataList.id,
-                        dataList.usersModel.names,
-                        `<small><b>Title:</b></small> ${dataList.servicesModel.title}</br>
-                         <small><b>Cost:</b></small> ${dataList.servicesModel.cost}</br>
-                         <small><b>Model:</b></small> ${dataList.modelsModel.title}`,
-                        dataList.bookingDate,
-                       
+                        dataList.title,
+                        dataList.longitude,
+                        dataList.latitude,
+                        `<div class="d-flex justify-content-around">
+                            <button class="btn bg-transparent text-info" onclick="editModel('${i}','User')">Edit</button>
+                            <button class="btn bg-transparent text-danger" onclick="deleteFunction('${dataList.id}')">Remove</button>
+                        </div>`,
                     ]).draw();
                 }
             }
@@ -159,8 +117,8 @@
     }
 
     function editModel(index, src) {
-        $(`#btnUpdate`).removeClass('d-none');
-        $(`#btnCreate`).addClass('d-none');
+        $(`#btnUpdate${src}`).removeClass('d-none');
+        $(`#btnCreate${src}`).addClass('d-none');
 
         switch (src) {
             case "User":
@@ -168,15 +126,15 @@
 
                 //get data
                 var id = table.row(index).data()[0];
-                var userName = table.row(index).data()[1];
-                var service = table.row(index).data()[2];
-                var booking = table.row(index).data()[3]; 
+                var title = table.row(index).data()[1];
+                var latitude = table.row(index).data()[2];
+                var longitude = table.row(index).data()[3];
 
                 //add data
                 $('input[name=id]').val(id);
-                $('input[name=names]').val(names);
-                $('input[name=email]').val(email);
-                getSelectValue("accountTypeId", accountType);
+                $('input[name=title]').val(title);
+                $('input[name=latitude]').val(latitude);
+                $('input[name=longitude]').val(longitude);
 
                 //display model
                 $('#modal').modal('show');
@@ -185,10 +143,10 @@
 
     //update and create
     async function dbHandler(update) {
-        var url = "createBookings";
+        var url = "createLocation";
         var spinnerClass = "btnSpinner";
         if (update) {
-            url = "updateBookings";
+            url = "updateLocation";
             spinnerClass = "btnSpinnerUpdate"
         }
         spinnerHandler(spinnerClass);
@@ -205,9 +163,9 @@
                 alertify.error('Unsuccessful - ' + response.errorMessage);
                 console.log(response.errorMessage);
             } else {
-                alertify.success("Booking Updated");
+                alertify.success("Updated");
                 $('#modal').modal('hide');
-                await getData();
+                await getUserData();
             }
         });
 
@@ -218,7 +176,7 @@
     async function deleteFunction(id) {
         var confirmText = "Are you sure you want to delete this?";
         if (confirm(confirmText)) {
-            await makeGetRequest(baseUrl + `deleteUsers?id=${id}`).then(async response => {
+            await makeGetRequest(baseUrl + `deleteLocation?id=${id}`).then(async response => {
                 if (response != null) {
                     console.log(response);
                     if (response.error) {
@@ -226,7 +184,7 @@
                     } else {
                         alertify.success("Successfuly Deleted");
                         $('#dataTable').DataTable({ "bDestroy": true }).clear();
-                        await getData();
+                        await getUserData();
                     }
 
                 }
@@ -241,7 +199,7 @@
                 elements[ii].value = "";
             }
         }
-        $(`#btnCreate`).removeClass('d-none');
-        $(`#btnUpdate`).addClass('d-none');
+        $(`#btnCreate${src}`).removeClass('d-none');
+        $(`#btnUpdate${src}`).addClass('d-none');
     }
 </script>
